# rust_cpp

./: Cargo.toml  README.md  build.rs
src/: calc.cpp  lib.rs  main.rs  md_about.rs  triple.cpp
