[package]
name = "rust_cpp"
version = "0.1.0"
edition = "2021"
authors = ["Kornilov LN <ln.KornilovStar@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.148"

ansi_term = "0.12"
#clap = "2.33"

chrono = "0.4"
datetime = "0.5.2"

time = "0.1.13"

[build-dependencies]
cc = "1.0.83"
